--- a/Odin/Content/css/orders.scss
+++ b/Odin/Content/css/orders.scss
@@ -15,6 +15,15 @@ body {
     cursor:pointer;
 }
 
+.sortLabel{
+    text-align: center;
+}
+
+.sortPlus, .sortMinus{
+    margin-left: 1rem;
+    display:none;
+}
+
 div#list {
     height: auto;
     padding-bottom: 4.5rem;
