--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -102,7 +102,7 @@
 
                 </div>
                 <div class="col-md-1 comments">
-                    <img src="~/Content/Images/icn_chat_bubble.png" />
+                    <img class="comments" src="~/Content/Images/icn_chat_bubble.png" />
                     <span>@propertyVM.Messages.Count()</span>
                 </div>
             </li>
