Enabling filtering of the properties list via radio buttons.

--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -30,7 +30,7 @@
         -->
     </div>
 
-    <ul class="row sectionList" id="propertiesList">
+    <ul class="row sectionList" id="propertiesList" data-filter="">
 
         @foreach (var propertyVM in Model)
         {
