--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -212,3 +212,42 @@
         }
     }
 }
+
+#propertiesList {
+
+    &[data-filter="liked"] {
+        .propertyItem[data-liked="True"] {
+            display: initial;
+        }
+
+        .propertyItem:not([data-liked="True"]) {
+            display: none;
+        }
+    }
+
+    &[data-filter="disliked"] {
+        .propertyItem[data-liked="False"] {
+            display: initial;
+        }
+
+        .propertyItem:not([data-liked="False"]) {
+            display: none;
+        }
+    }
+
+    &[data-filter="new"] {
+        .propertyItem[data-liked=""] {
+            display: initial;
+        }
+
+        .propertyItem:not([data-liked=""]) {
+            display: none;
+        }
+    }
+
+    &[filter=""] {
+        .propertyItem {
+            display: initial;
+        }
+    }
+}
