--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<Odin.Data.Core.Models.Order>
-    @{
-        ViewBag.Title = "Orders Page";
-        Layout = "~/Views/Shared/_Common.cshtml";
-    }
+﻿@model IEnumerable<Odin.ViewModels.Orders.Index.OrdersIndexViewModel>
+@{
+    ViewBag.Title = "Orders Page";
+    Layout = "~/Views/Shared/_Common.cshtml";
+}
 
 <div class="container-fluid" id="list">
     <div id="search">
@@ -42,54 +42,30 @@
         }
         @for (int j = 0; j < Model.Count(); j++)
         {
-            var order = (Odin.Data.Core.Models.Order)Model.ElementAt(j);
-            
-            <li class="row clickable orderRow" data-order-id="@order.Id">
-                <div class="col-md-2">
-                    <label class="header">Transferee</label>
-                    <p class="eeName">@order.Transferee.FullName</p>
-                    <p class="rmcName">@order.Rmc</p>
-                    <p class="clientName">@order.Client</p>
-                </div>
-                @{
-                    int at = 0;
-                    decimal s = 0;
-                    decimal c = 0;
-                    decimal cwid = 25;
-                    decimal swid = 50;
-                    decimal atwid = 100;
-                    for (int i = 0; i < order.Services.Count; i++)
-                    {
-                        if (order.Services.ElementAt(i).Selected == true)
-                        {
-                            at += 1;
-                        }
-                        if (order.Services.ElementAt(i).ScheduledDate.HasValue)
-                        {
-                            s += 1;
-                        }
-                        if (order.Services.ElementAt(i).CompletedDate.HasValue)
-                        {
-                            c += 1;
-                        }
-                    }
-                    cwid = (at == 0 ? 0 : c / at * 100);
-                    swid = (at == 0 ? 0 : s / at * 100);
-                    atwid = swid == 0?100:100;
+             var order = Model.ElementAt(j);
 
-                }
+        <li class="row clickable orderRow" data-order-id="@order.Id">
+            <div class="col-md-2">
+                <label class="header">Transferee</label>
+                <p class="eeName">@order.Transferee.FullName</p>
+                <p class="rmcName">@order.Rmc</p>
+                <p class="clientName">@order.Client</p>
+            </div>
+            @{ 
+                var tasks = order.updateTask(); 
+            }
             <div class="col-md-2">
                 <label class="header">Completed/Scheduled/Assigned</label>
                 <div class="progressBar" title="Tasks">
-                    <span class="progressBar__progress progressBar__auth" style="width:@Decimal.ToInt32(atwid)%" title="Authorized Tasks"></span>
-                    <span class="progressBar__progress progressBar__sched" style="width:@Decimal.ToInt32(swid)%" title="Scheduled Tasks"></span>
-                    <span class="progressBar__progress progressBar__comp" style="width:@Decimal.ToInt32(cwid)%" title="Completed Tasks"></span>
+                    <span class="progressBar__progress progressBar__auth" style="width:@Decimal.ToInt32(tasks.ElementAt(2))%" title="Authorized Tasks"></span>
+                    <span class="progressBar__progress progressBar__sched" style="width:@Decimal.ToInt32(tasks.ElementAt(1))%" title="Scheduled Tasks"></span>
+                    <span class="progressBar__progress progressBar__comp" style="width:@Decimal.ToInt32(tasks.ElementAt(0))%" title="Completed Tasks"></span>
                 </div>
             </div>
             <div class="col-md-2">
                 <label class="header">Manager</label>
                 <p>@order.ProgramManager.FullName</p>
-                <p class="subTitle">@order.ProgramManager.PhoneNumber</p>
+                <p class="subTitle">@order.ProgramManager.phoneNumber</p>
             </div>
             <div class="col-md-2">
                 <label class="header">Pre-Trip</label>
@@ -108,13 +84,13 @@
     </ul>
 </div>
 
-    @Styles.Render("~/Styling/orders")
+@Styles.Render("~/Styling/orders")
 
-    @section scripts
+@section scripts
 {
-        @Scripts.Render("~/Scripts/orders")
+    @Scripts.Render("~/Scripts/orders")
 
-        <script>
-            $(document).ready(OrdersPageController.init);
-        </script>
-    }
+    <script>
+        $(document).ready(OrdersPageController.init);
+    </script>
+}
