--- a/Odin/Views/Shared/_Common.cshtml
+++ b/Odin/Views/Shared/_Common.cshtml
@@ -14,10 +14,18 @@
     @RenderSection("scripts", required: false)
 </head>
 <body>
-    
+
     @Html.Partial("~/Views/Shared/Partials/_header.cshtml")
 
     @RenderBody()
 
+    <div class="spinnerOverlay">
+        <div class="sk-folding-cube">
+            <div class="sk-cube1 sk-cube"></div>
+            <div class="sk-cube2 sk-cube"></div>
+            <div class="sk-cube4 sk-cube"></div>
+            <div class="sk-cube3 sk-cube"></div>
+        </div>
+    </div>
 </body>
 </html>
