--- a/Odin/Views/Shared/_Common.cshtml
+++ b/Odin/Views/Shared/_Common.cshtml
@@ -19,7 +19,7 @@
 
     @RenderBody()
 
-    <div class="spinnerOverlay">
+    <div class="loaderOverlay">
         <div class="sk-folding-cube">
             <div class="sk-cube1 sk-cube"></div>
             <div class="sk-cube2 sk-cube"></div>
