--- a/Odin/Content/css/transferee/propertyMessages.css
+++ b/Odin/Content/css/transferee/propertyMessages.css
@@ -1,20 +1,50 @@
-﻿.modal-title {
+﻿#messageBody {
+  padding: 0 7%; }
+
+.modal-title {
   float: right;
   color: white; }
 
 .messageImage {
-  margin-top: 2rem;
-  margin-left: 4rem; }
+  margin-top: 1rem; }
 
-.messageHeader {
-  margin-bottom: 0px; }
+.messageListNotRead {
+  padding-left: 1rem;
+  background-color: lightgray; }
+  .messageListNotRead .messageHeader {
+    margin-bottom: 0px;
+    font-weight: 500;
+    background-color: lightgray; }
+    .messageListNotRead .messageHeader span {
+      font-weight: 400;
+      color: gray;
+      margin-left: 1rem;
+      background-color: lightgray; }
+
+.messageList {
+  padding-left: 1rem; }
+  .messageList .messageHeader {
+    margin-bottom: 0px;
+    font-weight: 500; }
+    .messageList .messageHeader span {
+      font-weight: 400;
+      color: gray;
+      margin-left: 1rem; }
 
 textarea#message {
-  width: 86%;
   height: 120px;
   border: 1px solid #cccccc;
   padding: 5px;
   font-family: Tahoma, sans-serif;
-  background-repeat: no-repeat;
-  margin-left: 7%; }
+  background-repeat: no-repeat; }
+
+.modal-footer {
+  padding: 2rem 0;
+  clear: both;
+  overflow: auto;
+  zoom: 1; }
+  .modal-footer .btn-primary {
+    float: right; }
+  .modal-footer .btn-secondary {
+    float: left; }
 
