--- a/Odin/Content/css/transferee/propertyMessages.scss
+++ b/Odin/Content/css/transferee/propertyMessages.scss
@@ -1,20 +1,61 @@
-﻿.modal-title {
+﻿#messageBody {
+    padding: 0 7%;
+}
+.modal-title {
     float: right;
     color: white;
 }
 .messageImage {
-    margin-top: 2rem;
-    margin-left: 4rem;
+    margin-top: 1rem;    
 }
-.messageHeader {
-    margin-bottom: 0px;
+.messageListNotRead {
+    padding-left: 1rem;
+    background-color: lightgray;    
+    .messageHeader {
+        margin-bottom: 0px;
+        font-weight: 500;
+        background-color: lightgray;
+
+        span {
+            font-weight: 400;
+            color: rgb(128, 128, 128);
+            margin-left: 1rem;
+            background-color: lightgray;
+        }    
+    }
+}
+.messageList {
+    padding-left: 1rem;    
+    .messageHeader {
+        margin-bottom: 0px;
+        font-weight: 500;
+
+        span {
+            font-weight: 400;
+            color: rgb(128, 128, 128);
+            margin-left: 1rem;
+        }
+    }
 }
 textarea#message {
-    width: 86%;
     height: 120px;
     border: 1px solid #cccccc;
     padding: 5px;
     font-family: Tahoma, sans-serif;
     background-repeat: no-repeat;
-    margin-left: 7%;
+}
+
+.modal-footer {
+    padding: 2rem 0;
+    clear: both;
+    overflow: auto;
+    zoom: 1;
+
+    .btn-primary {
+        float: right;
+    }
+
+    .btn-secondary {
+        float: left;
+    }
 }
