--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -103,7 +103,7 @@
                 </div>
                 <div class="col-md-1 comments">
                     <img class="comments" src="~/Content/Images/icn_chat_bubble.png" />
-                    <span>@propertyVM.Messages.Count()</span>
+                    <span>@propertyVM.Messages.Where(r => r.IsRead == false && r.AuthorId != ViewBag.CurrentUser).Count()</span>
                 </div>
             </li>
         }
