--- a/Odin/Views/Shared/Partials/_header.cshtml
+++ b/Odin/Views/Shared/Partials/_header.cshtml
@@ -4,7 +4,7 @@
         <a class="primaryNavHome" href="@Url.Action("Index","Orders")">
             <img class="primaryNavHome__logo--mobile" src="./img/dw_logo_mobile.png">
             <img class="primaryNavHome__logo" src="~/Content/Images/dwellworks_icon.png">
-            <p>Odin</p>
+            <p>Destination</p>
         </a>
         
         @*<a href="@Url.Action("GetUserNotificationHistory", "NotificationHistory")">History</a>*@
