Remove all notes to odin

--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -37,7 +37,7 @@
 
         <div id="logo">
             <img id="logoImage" src="~/Content/Images/dwellworks_icon.png" />
-            <span id="logoOdin">Odin</span>
+            <span id="logoOdin">Destination</span>
         </div>
     </div>
 </div>
