--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -14,9 +14,9 @@
                 <div id="caption">
                     <div id="logo">
                         <img id="logoImage" src="~/Content/Images/dwellworks_icon.png" />
-                        <span id="logoOdin">Odin</span>
+                        <span id="logoOdin">Destination</span>
                     </div>
-                    <span>Sign in to</span><span id="Odin"> Odin</span><span> to</span><br />
+                    <span>Sign in to</span><span id="Odin"> Destination</span><span> to</span><br />
                     <span>get started</span>
                 </div>
                
