--- a/Odin/Views/Mailers/ResetPassword.cshtml
+++ b/Odin/Views/Mailers/ResetPassword.cshtml
@@ -12,7 +12,7 @@
                 <div id="dwellworks" class="mailer" style="margin-top: 40px;text-align:center;display:block">
                     <img src="@Model.LogoUrl" style="vertical-align:middle;text-align:center;border:0">
                     <p style="border-left: 1px solid gray;margin-left:4px;top:-2px;height: 21px;position:relative;display:inline-block;line-height:1.846;">&nbsp;</p>
-                    <p style="top:-3px;color:#4bad48;font-size:20px;font-family:sans-serif;line-height:1.846;display:inline-block;margin: 0 0 1em;text-align:center;letter-spacing:0.1px">Odin</p>
+                    <p style="top:-3px;color:#4bad48;font-size:20px;font-family:sans-serif;line-height:1.846;display:inline-block;margin: 0 0 1em;text-align:center;letter-spacing:0.1px">Destination</p>
                 </div>
                
                 <div style="margin-top: 72px;font-size: 36px;line-height: 50px;font-family: sans-serif;" id="caption">
