--- a/Odin/Views/Shared/Partials/_header.cshtml
+++ b/Odin/Views/Shared/Partials/_header.cshtml
@@ -2,7 +2,7 @@
 <header>
     <nav id="primaryNav">
         <a class="primaryNavHome" href="@Url.Action("Index","Orders")">
-            <img class="primaryNavHome__logo--mobile" src="./img/dw_logo_mobile.png">
+            <img class="primaryNavHome__logo--mobile" src="~/Content/Images/dw_logo_mobile.png">
             <img class="primaryNavHome__logo" src="~/Content/Images/dwellworks_icon.png">
             <p>Odin</p>
         </a>
